  * Fixed :highlight regression introduced in 0.7.0.
    In 0.6.8, if the user entered a :highlight command from the CGDB
    status bar, for instance:
        :highlight Comment ctermfg=Blue
    CGDB would updated the currently displayed source file
    with the requested highlighting changes. In 0.7.0 this would not occur.
    Both versions honored :highlight in the .cgdbrc file.

  * Fix issue #125 - CGDB can cross compile again.

  * The rust syntax highlighter is now case sensitive instead of case
    insensitive.

  * Fix issue #129. CGDB with old versions of ncurses (5.6 or before)
    would not display colors. Now it will display colors, but will
    not support ansi colors in the GDB window.

  * Fix issue #137. rustlexer.lpp fails to compile with some versions
    of GNU autotools.

  * Fix issue #135. CGDB would "freeze" when opening the file
    dialog if the number of files was very large. Updating the
    gdbwire parser resolved the issue.

  * Add support for readline's backward-kill-word and kill-word at gdb prompt

cgdb-0.7.0 (03/21/2017)

  * Remove help2man dependency. CGDB has a good info page which
    should suffice.

  * The hlsearch option has been added to CGDB. This improves the
    searching and displaying of searching functionality within CGDB.
    By default the option is off. When enabled, and there exists a
    previous search, CGDB will display the search results using
    the Search highlighting group. The IncSearch highlighting group
    is used to display the active search. The hlsearch option
    highlights previous searches in the source window, the gdb window
    when in scroll mode and the file dialog window.

  * CGDB now supports showing assembly code! By default, CGDB will
    display source code when it is available and assembly code
    when no source code is available. The option 'set disasm'
    allows you to show mixed source/assembly when both are available.
